--- a/source/scss/cagov/tabs.scss
+++ b/source/scss/cagov/tabs.scss
@@ -6,7 +6,7 @@
     position: relative;
     border: 1px solid $nav-tabs-border-color;
 
-    @media (max-width: $screen-sm-max) {
+    @media (max-width: $screen-xs-max) {
         border: none;
     }
 
@@ -33,11 +33,11 @@
                 display: block;
 
                 &,
-
                 &:hover {
                     border: 1px solid #f5f5f5;
                     border-top: none !important;
                     text-decoration: none;
+                    border-bottom: 1px solid #dee2e6;
                 }
             }
         }
@@ -52,38 +52,84 @@
 // If left and right solutions are required see: http://www.bootply.com/74926
 .tabs-bottom {
     .tab-content {
-        padding-bottom:30px;    // Approx height of tabs
+        padding-bottom: 30px; // Approx height of tabs
     }
-    
+
     .nav-tabs {
-        position:absolute;
-        bottom:0;
-        width:100%;
-        border-bottom:none;
-        margin-bottom:0;
-        
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        border-bottom: none;
+        margin-bottom: 0;
+
         > li {
-            margin-bottom:0;
-			display: block;
+            margin-bottom: 0;
+            display: block;
         }
     }
 }
 
 .panel-group.responsive {
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
 /* Responsive tabs bootstrap 4 fix */
-@mixin d-none { display: none !important; } @mixin d-block { display: block !important; } @mixin d-flex { display: flex !important; } .panel-group { &.responsive { &.hidden-xs.hidden-sm { @include media-breakpoint-down(sm) { @include d-none; } @include media-breakpoint-up(md) { @include d-block; } } &.visible-xs.visible-sm { @include media-breakpoint-down(sm) { @include d-block; } @include media-breakpoint-up(md) { @include d-none; } } } }
+@mixin d-none {
+    display: none !important;
+}
+
+@mixin d-block {
+    display: block !important;
+}
+
+@mixin d-flex {
+    display: flex !important;
+}
+
+.panel-group {
+    &.responsive {
+        &.hidden-xs.hidden-sm {
+            @include media-breakpoint-down(sm) {
+                @include d-none;
+            }
+
+            @include media-breakpoint-up(md) {
+                @include d-block;
+            }
+        }
+
+        &.visible-xs.visible-sm {
+            @include media-breakpoint-down(sm) {
+                @include d-block;
+            }
+
+            @include media-breakpoint-up(md) {
+                @include d-none;
+            }
+        }
+    }
+}
 
 
 // In Tabs bootstap 4 uses active class in a elements (not parent li)
+.nav-tabs > li {
+    margin-bottom: -1px;
+    margin-left: 1px;
+
+
+    &:first-child {
+        margin-left: 0;
+    }
+}
+
+
 .nav-tabs > li > a.active, .nav-tabs > li > a.active:hover {
-  color: #555555;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-bottom-color: transparent;
-  cursor: default;
+    color: #555555;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+    cursor: default;
+    border-bottom: 1px solid #fff;
 }
 
 .nav-tabs > li > a:hover {
@@ -96,29 +142,66 @@
 }
 
 
-.nav-tabs > li {
-    margin-bottom: -1px;
-    margin-left: 1px;
 
-    &:first-child {
-        margin-left: 0;
-    }
-}
-	
+
 // Rmoving :after content from bootstrap4 tabs.
 
-   .nav-tabs  {
-	   .nav-item {
-		   margin-left: 1px;
-           &:hover {
-               background-color:transparent;
-           }
-		   
-		   &:first-child {
-			   margin-left: 0;
-			   }
-		   &::after {
-			   display:none;
-			   }
-		}
-   }
+.nav-tabs {
+    .nav-item {
+        margin-left: 2px;
+
+        &:hover {
+            background-color: transparent;
+        }
+
+        &:first-child {
+            margin-left: 0;
+        }
+
+        &::after {
+            display: none;
+        }
+    }
+}
+
+
+
+
+/* Responsive tabs*/
+
+.responsive {
+    .nav-tabs {
+        display: none;
+    }
+}
+
+@media (min-width: $screen-sm-min) {
+    .responsive {
+        .nav-tabs {
+            display: flex;
+        }
+
+        &.tab-group .card {
+            border: none;
+            padding: 0;
+            margin-bottom: 0;
+            background-color: transparent;
+
+            .card-header {
+                display: none;
+            }
+
+            .collapse {
+                display: block;
+            }
+        }
+    }
+}
+
+@media (max-width: $screen-xs-max) {
+    .responsive .tab-pane {
+        display: block !important;
+        opacity: 1 !important;
+        padding: 0 !important;
+    }
+}
