Specified logo image max-height in fixed navigation header on scroll

--- a/source/less/cagov/fixed-header.less
+++ b/source/less/cagov/fixed-header.less
@@ -87,6 +87,8 @@
 
             a {
 				max-width: 225px; // Beta 5.0 addition
+
+                img {max-height:50px;}
             }
         }
 		
