- Added version number and the date header code to gulpfile.js - Updated the charts page - Added more background transperancy to the active search bar

--- a/css/colorscheme-eureka.css
+++ b/css/colorscheme-eureka.css
@@ -1,3 +1,6 @@
+/**
+ * CA State Template v5.5 -  @version v5.5.0 -  10/19/2018 
+  STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    EUREKA
 ----------------------------------------- */
@@ -299,19 +302,6 @@ h1 span[class^="ca-gov-icon-"]:first-child {
 
     .search-container.active .search-textfield {
         border-color: #bdbdbd;
-    }
-
-.search-container.featured-search {
-    background: none;
-}
-
-    .search-container.featured-search:hover, .search-container.featured-search:focus {
-        background: none;
-    }
-
-    .search-container.featured-search.active {
-        background: #222222;
-        opacity: 0.9;
     }
 
 /* -----------------------------------------
