--- a/source/scss/cagov/icon-blocks.scss
+++ b/source/scss/cagov/icon-blocks.scss
@@ -77,15 +77,15 @@
 }
 
 .circle-icon {
-    background: darken($color-p3, 10%);
+    background: $gray-darker;
     width: 7rem;
     height: 7rem;
     text-align: center;
     line-height: 7rem;
-    padding:1.5rem;
+    padding: 1.5rem;
     border-radius: 50%;
-    font-size:3.5rem;
-    text-decoration:none;
+    font-size: 3.5rem;
+    text-decoration: none;
 }
 
 .block-icon {
