--- a/source/scss/cagov/template-comments.scss
+++ b/source/scss/cagov/template-comments.scss
@@ -1,7 +1,5 @@
-/* cagov-template-v5 */
-/* STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 
 /* -----------------------------------------
-   BOOTSTRAP V4 - /source/scss/bootstrap/ 
+   BOOTSTRAP v4.1.3 - /source/scss/bootstrap/ 
    https://getbootstrap.com/
 ----------------------------------------- */
