--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,7 +1,8 @@
-/* cagov-template-v5 */
-/* STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
+/**
+ * CA State Template v5.5 -  @version v5.5.0 -  10/19/2018 
+  STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
-   BOOTSTRAP V4 - /source/scss/bootstrap/ 
+   BOOTSTRAP v4.1.3 - /source/scss/bootstrap/ 
    https://getbootstrap.com/
 ----------------------------------------- */
 :root {
@@ -10395,12 +10396,25 @@ code {
   display: block;
 }
 
+.search-container.featured-search {
+  background: none;
+}
+
+.search-container.featured-search:hover, .search-container.featured-search:focus {
+  background: none;
+}
+
+.search-container.featured-search.active {
+  background: #000;
+  opacity: 0.7;
+}
+
 @media (min-width: 768px) {
   .fixed.compact .search-container {
     opacity: 0;
   }
   .active-search .fixed.compact .search-container, .fixed.compact .search-container.active {
-    opacity: 1;
+    opacity: 0.9;
     top: 55px;
   }
 }
@@ -10411,7 +10425,7 @@ code {
     top: 35px;
   }
   .active-search .fixed.compact .nav-full-width + .search-container, .fixed.compact .nav-full-width + .search-container.active {
-    opacity: 1;
+    opacity: 0.9;
     top: 35px;
   }
 }
@@ -10421,7 +10435,7 @@ code {
     top: 32px;
   }
   .active-search .fixed.compact .nav-full-width + .search-container, .fixed.compact .nav-full-width + .search-container.active {
-    opacity: 1;
+    opacity: 0.9;
     top: 32px;
   }
 }
@@ -16438,7 +16452,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
 }
 
 .circle-icon {
-  background: #1d2127;
+  background: #222222;
   width: 7rem;
   height: 7rem;
   text-align: center;
