--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,3 +1,6 @@
+/**
+ * CA State Template v5.5 -  @version v5.5.0 -  9/19/2018 
+  STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
 ----------------------------------------- */
