Added responsive embed bootstrap classes to the template core css.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v5.0.2 - Oct-17-2018 */
+/* cagov-template-v5 - v5.0.2 - Oct-22-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -3686,6 +3686,34 @@ a.label:focus {
 }
 .panel-danger > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #ebccd1;
+}
+/* -----------------------------------------
+   RESPONSIVE EMBED - /source/less/bootstrap/resonsive-embeded.less
+----------------------------------------- */
+.embed-responsive {
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.embed-responsive .embed-responsive-item,
+.embed-responsive iframe,
+.embed-responsive embed,
+.embed-responsive object {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  border: 0;
+}
+.embed-responsive.embed-responsive-16by9 {
+  padding-bottom: 56.25%;
+}
+.embed-responsive.embed-responsive-4by3 {
+  padding-bottom: 75%;
 }
 /* -----------------------------------------
    CLOSE ICON - /source/less/bootstrap/close.less
