--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -4,90 +4,147 @@
 
 
 body {
-	font-family: $font-family-sans-serif;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
-  color:$text-color;
+    font-family: $font-family-sans-serif;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    color: $text-color;
 }
 
-a {color: $link-color;
-  &:hover {
-	  color:$link-hover-color;
-	  }
-	}
-
-.featured-narrative {
-     border-bottom: 1px solid #d6d6d6;
-     border-top: 1px solid #d6d6d6;
-     padding: 10px 10px 0 10px;
-     margin-bottom: ($line-height-computed / 2);
-     margin-left: 20px;
- }
- 
-//
-// TYPOGRAPHY
-// --------------------------------------------------
-
-
-p {
-	margin-bottom:0.7rem;
-	}
-
-.ie9 p {
-    + h1, + h2, + h3, + h4 {
-        padding-top:10px;       // Add top padding back into ie9's headers
-    }
-}   
-     
-h1, .h1 {
-    //color: #c60; // Orange
-    
-    span[class^="ca-gov-icon-"]:first-child {
-        display:none;                           // hide icon used in v4
-    }
-}
-
-// OVER RIDE BOOTSTRAP SIZES
-h1, .h1 { @include font-size(2.4); margin-top: 0.67em; margin-bottom: 0.55em;font-family:$headings-font-family;}
-h2, .h2 { @include font-size(1.94);  margin-top: 0.83em; margin-bottom: 0.7em;font-family:$headings-font-family;}
-h3, .h3 { @include font-size(1.54);  margin-top: 1em; margin-bottom: 0.7em;font-family:$headings-font-family;}
-h4, .h4 { @include font-size(1.25);  margin-top: 1.33em; margin-bottom: 1em;font-family:$headings-font-family;}
-h5, .h5 { @include font-size(1);  margin-top: 1.67em; margin-bottom: 1.3em;font-family:$headings-font-family;}
-h6, .h6 { @include font-size(.87);  margin-top: 1.67em; margin-bottom: 1.3em;font-family:$headings-font-family;}
-
+/* make body font size larger for mobile */
 @media (max-width: $screen-xs-max) {
-    // SMALLER HEADING SIZE FOR MOBILE
-    h1, .h1 { @include font-size(2); }
-    h2, .h2 { @include font-size(1.625); }
-    h3, .h3 { @include font-size(1.375); }
-    h4, .h4 { @include font-size(1.125); }
+    body {
+        @include font-size(1.2);
+    }
 }
 
+    a {
+        color: $link-color;
 
-// ICON SIZING
-[class*="icon-"] {
-    &.big {
-        @include font-size(1.94);
+        &:hover {
+            color: $link-hover-color;
+        }
     }
-    
-    &.bigger {
+
+    .featured-narrative {
+        border-bottom: 1px solid #d6d6d6;
+        border-top: 1px solid #d6d6d6;
+        padding: 10px 10px 0 10px;
+        margin-bottom: ($line-height-computed / 2);
+        margin-left: 20px;
+    }
+
+    //
+    // TYPOGRAPHY
+    // --------------------------------------------------
+
+
+    p {
+        margin-bottom: 0.7rem;
+    }
+
+    .ie9 p {
+        + h1, + h2, + h3, + h4 {
+            padding-top: 10px; // Add top padding back into ie9's headers
+        }
+    }
+
+    h1, .h1 {
+        //color: #c60; // Orange
+        span[class^="ca-gov-icon-"]:first-child {
+            display: none; // hide icon used in v4
+        }
+    }
+
+    // OVER RIDE BOOTSTRAP SIZES
+    h1, .h1 {
         @include font-size(2.4);
+        margin-top: 0.67em;
+        margin-bottom: 0.55em;
+        font-family: $headings-font-family;
     }
-    
-    &.biggest {
-        @include font-size(3.5);
-    }
-}
-.serif {
-    font-family:$font-family-serif !important;
-}
-.monospace {
-    font-family:$font-family-monospace !important;
-}
-.heading {
-    font-family:$headings-font-family !important;
-}
 
-code {
-    color: $code-color;
-}
+    h2, .h2 {
+        @include font-size(1.94);
+        margin-top: 0.83em;
+        margin-bottom: 0.7em;
+        font-family: $headings-font-family;
+    }
+
+    h3, .h3 {
+        @include font-size(1.54);
+        margin-top: 1em;
+        margin-bottom: 0.7em;
+        font-family: $headings-font-family;
+    }
+
+    h4, .h4 {
+        @include font-size(1.25);
+        margin-top: 1.33em;
+        margin-bottom: 1em;
+        font-family: $headings-font-family;
+    }
+
+    h5, .h5 {
+        @include font-size(1);
+        margin-top: 1.67em;
+        margin-bottom: 1.3em;
+        font-family: $headings-font-family;
+    }
+
+    h6, .h6 {
+        @include font-size(0.8);
+        margin-top: 1.67em;
+        margin-bottom: 1.3em;
+        font-family: $headings-font-family;
+    }
+
+    @media (max-width: $screen-xs-max) {
+        // LARGER HEADING SIZE FOR MOBILE
+        h1, .h1 {
+            @include font-size(2.5);
+        }
+
+        h2, .h2 {
+            @include font-size(2);
+        }
+
+        h3, .h3 {
+            @include font-size(1.6);
+        }
+
+        h4, .h4 {
+            @include font-size(1.3);
+        }
+    }
+
+
+    // ICON SIZING
+    [class*="icon-"] {
+        &.big {
+            @include font-size(1.94);
+        }
+
+        &.bigger {
+            @include font-size(2.4);
+        }
+
+        &.biggest {
+            @include font-size(3.5);
+        }
+    }
+
+    .serif {
+        font-family: $font-family-serif !important;
+    }
+
+    .monospace {
+        font-family: $font-family-monospace !important;
+    }
+
+    .heading {
+        font-family: $headings-font-family !important;
+    }
+
+    code {
+        color: $code-color;
+    }
