--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.0 -  10/29/2018 
+ * CA State Template v5.5 -  @version v5.5.0 -  11/8/2018 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.1.3 - /source/scss/bootstrap/ 
@@ -8958,7 +8958,7 @@ html {
 ----------------------------------------- */
 body {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.45;
   color: #333333;
 }
@@ -11080,6 +11080,28 @@ table.gsc-search-box td {
   }
 }
 
+/* FULL WIDTH MENU WITH ICONS */
+@media (min-width: 768px) {
+  .nav-full-width-icons .main-navigation {
+    padding-left: 0px;
+    margin-top: 0px;
+  }
+  .nav-full-width-icons.fixed.compact .main-navigation {
+    margin-top: 0px;
+  }
+  /* full width menu with icons BUT with .no-icons class */
+  .nav-full-width-icons .no-icons {
+    min-height: 55px;
+  }
+  .nav-full-width-icons .no-icons .top-level-nav {
+    min-height: 55px;
+  }
+  .nav-full-width-icons .no-icons .top-level-nav .nav-item > a {
+    min-height: 55px;
+    padding-top: 1rem;
+  }
+}
+
 /* -----------------------------------------
    MEGA MENU
    /source/scss/cagov/nav-megamenu.scss
@@ -11879,14 +11901,93 @@ a.second-level-link [class^="ca-gov-icon-"] {
   }
 }
 
-/* .global-header.compact {
-    .utility-header {
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        height: 0;
-    }
-} */
+/* Utility header when using full width menu with icons */
+.nav-full-width-icons .utility-header {
+  min-height: 60px;
+}
+
+.nav-full-width-icons .utility-header a {
+  padding: 0px;
+}
+
+.nav-full-width-icons .utility-header .header-cagov-logo {
+  position: relative;
+  width: 1px;
+  height: 1px;
+}
+
+.nav-full-width-icons .utility-header .header-cagov-logo img {
+  height: 45px;
+  position: relative;
+  top: 5px;
+  left: 0px;
+}
+
+.nav-full-width-icons .utility-header .header-organization-banner {
+  padding-left: 90px;
+  min-height: 60px;
+}
+
+@media (min-width: 768px) {
+  .nav-full-width-icons .header-organization-banner a img {
+    width: 100%;
+    max-width: 300px;
+    max-height: 60px;
+    object-fit: contain !important;
+    object-position: left;
+  }
+  .nav-full-width-icons.fixed.compact .header-organization-banner a {
+    max-width: inherit;
+  }
+  .nav-full-width-icons.fixed.compact .header-organization-banner a img {
+    max-height: 60px !important;
+  }
+  .nav-full-width-icons .settings-links {
+    margin-top: -52px;
+  }
+  .nav-full-width-icons .settings-links a, .nav-full-width-icons .settings-links button {
+    padding: 8px 10px 8px 10px;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    color: #fff;
+  }
+  .nav-full-width-icons .settings-links a:hover, .nav-full-width-icons .settings-links a:focus, .nav-full-width-icons .settings-links button:hover, .nav-full-width-icons .settings-links button:focus {
+    border: 1px solid #fff;
+  }
+}
+
+@media (max-width: 767px) {
+  .nav-full-width-icons .header-organization-banner img {
+    width: 100%;
+    max-width: 300px;
+    max-height: 70px;
+    object-fit: contain !important;
+    object-position: left;
+  }
+  .nav-full-width-icons .utility-header {
+    height: 60px;
+  }
+  .nav-full-width-icons .settings-links .utility-links {
+    text-align: left;
+    position: relative;
+    top: 20px;
+    z-index: 9;
+  }
+  .nav-full-width-icons .settings-links .utility-links a, .nav-full-width-icons .settings-links .utility-links button {
+    padding: 8px 10px 8px 10px;
+    border: 1px solid #046B99;
+    border-radius: 3px;
+    color: #046B99;
+  }
+  .nav-full-width-icons .mobile-controls {
+    background-color: transparent;
+    float: right;
+    width: 50%;
+    position: relative;
+    z-index: 9;
+  }
+}
+
 /* -----------------------------------------
    SECTIONS
    /source/scss/cagov/sections.scss
@@ -14500,7 +14601,7 @@ hr.hr-light {
 
 .panel .panel-heading .options .btn, .panel .card-heading .options .btn, .panel .card-header .options .btn, .card .panel-heading .options .btn, .card .card-heading .options .btn, .card .card-header .options .btn {
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -14667,7 +14768,7 @@ hr.hr-light {
   float: right;
   margin-top: 11.5px;
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -15231,7 +15332,7 @@ figcaption {
   float: right;
   margin-top: 11.5px;
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -15331,7 +15432,7 @@ figcaption {
   float: right;
   margin-top: 11.5px;
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -15894,7 +15995,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   background-color: #fff;
   border-color: #333;
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
   float: right;
@@ -15975,7 +16076,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   background-color: #fff;
   border-color: #333;
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -16165,8 +16266,8 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   position: absolute;
   top: 60%;
   left: 50%;
-  margin-left: -1rem;
-  margin-top: -1.5rem;
+  margin-left: -1.1rem;
+  margin-top: -1.65rem;
   z-index: 101;
   font-family: 'CaGov';
   font-size: 32px;
@@ -16561,7 +16662,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   float: right;
   margin-top: 11.5px;
   padding: 1px 5px;
-  font-size: 0.8rem;
+  font-size: 0.88rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -17240,7 +17341,7 @@ blockquote.blockquote-reverse .small:after {
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 12px;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.45;
   border-radius: 0;
   -webkit-user-select: none;
@@ -19643,7 +19744,7 @@ html:not(.ie8) .stats-highlight img {
 }
 
 .font-size-sm {
-  font-size: 0.75rem;
+  font-size: 0.825rem;
 }
 
 .font-size-70x {
