--- a/css/colorscheme-orangecounty.css
+++ b/css/colorscheme-orangecounty.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.0 -  10/19/2018 
+ * CA State Template v5.5 -  @version v5.5.0 -  11/8/2018 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ORANGE COUNTY
@@ -78,6 +78,13 @@
 .utility-header {
     background: #A15801;
     color: #ffffff;
+}
+
+@media (max-width: 767px) {
+    .nav-full-width-icons .settings-links .utility-links a, .nav-full-width-icons .settings-links .utility-links button {
+        border: 1px solid #A15801;
+        color: #A15801;
+    }
 }
 
 .global-header {
