--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -138,14 +138,120 @@
             left: 5px;
         }
     }
-    //
-    // HIDE UTILITY HEADER IN HEADER COMPACT MODE
-    // --------------------------------------------------
-    /* .global-header.compact {
-    .utility-header {
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        height: 0;
+
+
+
+
+/* Utility header when using full width menu with icons */
+
+.nav-full-width-icons .utility-header {
+    min-height: 60px;
+
+    a {
+        padding: 0px;
     }
-} */
+
+    .header-cagov-logo {
+        position: relative;
+        width: 1px;
+        height: 1px;
+
+        img {
+            height: 45px;
+            position: relative;
+            top: 5px;
+            left: 0px;
+        }
+    }
+
+    .header-organization-banner {
+        padding-left: 90px;
+        min-height: 60px;
+    }
+}
+
+
+// Desktop view
+@media (min-width: $screen-sm-min) {
+
+    .nav-full-width-icons .header-organization-banner a img {
+        width: 100%;
+        max-width: 300px;
+        max-height: 60px;
+        object-fit: contain !important;
+        object-position: left;
+    }
+
+    // fixed mode
+    .nav-full-width-icons.fixed.compact .header-organization-banner a {
+        max-width: inherit;
+
+        img {
+            max-height: 60px !important;
+        }
+    }
+
+
+    .nav-full-width-icons .settings-links {
+        margin-top: -52px;
+
+        a, button {
+            padding: 8px 10px 8px 10px;
+            border: 1px solid #fff;
+            border-radius: 3px;
+            color: #fff;
+
+            &:hover, &:focus {
+                border: 1px solid #fff;
+            }
+
+
+        }
+    }
+
+}
+
+// Mobile view
+@media (max-width: $screen-xs-max) {
+    .nav-full-width-icons {
+
+        .header-organization-banner img {
+            width: 100%;
+            max-width: 300px;
+            max-height: 70px;
+            object-fit: contain !important;
+            object-position: left;
+        }
+
+        .utility-header {
+            height: 60px;
+        }
+
+        .settings-links {
+            .utility-links {
+                text-align: left;
+                position: relative;
+                top: 20px;
+                z-index: 9;
+
+                a, button {
+                    padding: 8px 10px 8px 10px;
+                    border: 1px solid $color-p2;
+                    border-radius: 3px;
+                    color: $color-p2;
+                }
+            }
+        }
+
+        .mobile-controls {
+            background-color: transparent;
+            float: right;
+            width: 50%;
+            position: relative;
+            z-index: 9;
+        }
+    }
+
+
+   
+}
