--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -88,9 +88,9 @@ $font-family-sans-serif:  "Source Sans Pro", sans-serif;  // CAgov Font
 $font-family-serif:       "Merriweather", serif;
 // Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;     
-$font-family-base:        $font-family-sans-serif !default;     
+$font-family-base:        $font-family-sans-serif !default;
 
-$font-size-base:          1rem !default; // Old Bootstrap3 value 14px !default; 
+$font-size-base: 1.1rem !global; 
 $font-size-large:         $font-size-base * 1.25 !default; // ~18px
 $font-size-small:         $font-size-base * 0.85 !default; // ~12px
 $font-size-x-small:       $font-size-base * 0.8; // ~11px
