--- a/css/colorscheme-santabarbara.css
+++ b/css/colorscheme-santabarbara.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.0 -  11/8/2018 
+ * CA State Template v5.5 -  @version v5.5.0 -  11/14/2018 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    SANTABARBARA
@@ -2219,4 +2219,63 @@ html.high-contrast {
 
     html.high-contrast .close {
         opacity: 1;
+    }
+
+    html.high-contrast input[type="checkbox"]:checked + i,
+    html.high-contrast input[type="radio"]:checked + i,
+    html.high-contrast input[type="checkbox"]:checked + * i,
+    html.high-contrast input[type="radio"]:checked + * i {
+        color: #000 !important;
+        background-color: #ffd600 !important;
+        border-color: #ffd600;
+    }
+
+    html.high-contrast .bg-primary--checked.checked,
+    html.high-contrast .checked .bg-primary--checked {
+        background-color: #ffd600 !important;
+    }
+
+    html.high-contrast .check-icon-checkbox {
+        color: #000 !important;
+        border-color: #ffd600 !important;
+    }
+
+        html.high-contrast .check-icon-checkbox i {
+            color: #000 !important;
+        }
+
+    html.high-contrast .select {
+        border: 1px solid #ffd600 !important;
+    }
+
+        html.high-contrast .select::after {
+            border-left: 1px solid #ffd600 !important;
+            background: #000 !important;
+        }
+
+    html.high-contrast .check {
+        border: 1px solid #ffd600 !important;
+    }
+
+    html.high-contrast input[type="checkbox"]:checked + .bg-primary--checked,
+    html.high-contrast input[type="radio"]:checked + .bg-primary--checked,
+    html.high-contrast input[type="checkbox"]:checked + * .bg-primary--checked,
+    html.high-contrast input[type="radio"]:checked + * .bg-primary--checked {
+        background-color: #ffd600 !important;
+        color: #000 !important;
+    }
+
+    html.high-contrast input[type="checkbox"]:checked + .bg-highlight--checked,
+    html.high-contrast input[type="radio"]:checked + .bg-highlight--checked,
+    html.high-contrast input[type="checkbox"]:checked + * .bg-highlight--checked,
+    html.high-contrast input[type="radio"]:checked + * .bg-highlight--checked {
+        background-color: #ffd600 !important;
+        color: #000 !important;
+    }
+
+    html.high-contrast input[type="checkbox"]:checked + .color-white--checked,
+    html.high-contrast input[type="radio"]:checked + .color-white--checked,
+    html.high-contrast input[type="checkbox"]:checked + * .color-white--checked,
+    html.high-contrast input[type="radio"]:checked + * .color-white--checked {
+        color: #000 !important;
     }
