--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.0 -  11/8/2018 
+ * CA State Template v5.5 -  @version v5.5.0 -  11/14/2018 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.1.3 - /source/scss/bootstrap/ 
@@ -9824,6 +9824,9 @@ code {
   .fixed.compact .header-organization-banner a {
     max-width: 225px;
   }
+  .fixed.compact .header-organization-banner a img {
+    max-height: 50px;
+  }
   .fixed.compact .top-level-nav {
     min-height: 55px;
   }
@@ -9983,7 +9986,7 @@ code {
 @media (min-width: 768px) {
   .search-container, .featured-search.active {
     position: absolute;
-    top: 85px;
+    top: 87px;
   }
 }
 
@@ -10074,7 +10077,6 @@ code {
   line-height: 44px;
   cursor: pointer;
   color: #777777;
-  opacity: 0.8;
 }
 
 @media (max-width: 767px) {
@@ -10178,7 +10180,7 @@ code {
     opacity: 1;
     -webkit-transition: top 0.4s, left 0.2s 0.4s, width 0.2s 0.4s, background-color 0.6s, border 0.4s, padding 0.2s 0.4s;
     transition: top 0.4s, left 0.2s 0.4s, width 0.2s 0.4s, background-color 0.6s, border 0.4s, padding 0.2s 0.4s;
-    top: 85px;
+    top: 87px;
     left: 0;
     padding: 20px 0;
     width: 100%;
@@ -10396,8 +10398,7 @@ code {
 }
 
 .search-container.featured-search.active {
-  background: #000;
-  opacity: 0.7;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 @media (min-width: 768px) {
@@ -10405,7 +10406,7 @@ code {
     opacity: 0;
   }
   .active-search .fixed.compact .search-container, .fixed.compact .search-container.active {
-    opacity: 0.9;
+    opacity: 1;
     top: 55px;
   }
 }
@@ -10416,7 +10417,7 @@ code {
     top: 35px;
   }
   .active-search .fixed.compact .nav-full-width + .search-container, .fixed.compact .nav-full-width + .search-container.active {
-    opacity: 0.9;
+    opacity: 1;
     top: 35px;
   }
 }
@@ -10426,7 +10427,7 @@ code {
     top: 32px;
   }
   .active-search .fixed.compact .nav-full-width + .search-container, .fixed.compact .nav-full-width + .search-container.active {
-    opacity: 0.9;
+    opacity: 1;
     top: 32px;
   }
 }
@@ -10455,7 +10456,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
 }
 
 .gsc-control-searchbox-only input.gsc-input {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: white;
   border-radius: 0;
   border: 3px solid transparent;
   transition: border 0.4s;
@@ -10463,7 +10464,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
   font-size: 1.1rem;
   height: 55px !important;
   padding: 14px !important;
-  opacity: 0.8 !important;
+  opacity: 1 !important;
   width: 100%;
   background-position-x: 7px !important;
 }
@@ -10511,7 +10512,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
   font-family: cagov;
   font-size: 2rem;
   width: 100%;
-  color: #666;
+  color: #d6d6d6;
   display: block;
   margin-top: 12px;
   margin-left: 2px;
@@ -10536,7 +10537,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
   font-family: cagov;
   font-size: 2rem;
   width: 100%;
-  color: #666;
+  color: #d6d6d6;
   display: block;
   margin-top: 12px;
   margin-left: 2px;
@@ -13112,7 +13113,6 @@ body {
   top: 50%;
   margin-left: -40px;
   margin-top: -40px;
-  background: url("owl.video.play.png") no-repeat;
   cursor: pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
