--- a/css/colorscheme-orangecounty.css
+++ b/css/colorscheme-orangecounty.css
@@ -299,7 +299,7 @@ h1 span[class^="ca-gov-icon-"]:first-child {
 }
 
 .search-container.active {
-    background: #d6d6d6;
+    background: rgba(0, 0, 0, 0.7);
 }
 
     .search-container.active .submit-container button {
