--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17737,6 +17737,8 @@ fieldset[disabled] .btn-more {
 }
 
 .service-tile-panel .btn.close {
+  position: relative;
+  z-index: 1;
   font-size: 56px;
   font-size: 3.5rem;
 }
@@ -17897,6 +17899,10 @@ fieldset[disabled] .btn-more {
   margin-left: -15px;
   bottom: -15px;
   z-index: 5;
+}
+
+div[data-state="open"] .title {
+  color: #FDB81E;
 }
 
 .service-tile-empty {
